# advent2020

./: README.md  pyproject.toml
advent2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day14_v2.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day23_v2.py  day24.py  day25.py  utils.py
inputs/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day10.txt  day11.txt  day12.txt  day14.txt  day16.txt  day18.txt  day20.txt  day21.txt  day22.txt  day24.txt
tests/: test_advent2020.py
