[tool.poetry]
name = "advent2020"
version = "0.1.0"
description = ""
authors = ["Joel Grus <joelgrus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
pdbpp = "^0.10.2"
ipython = "^7.19.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
